--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Zhangtejun.GitHub.io by zhangtejun</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/jquery.min.js"></script>
     <script src="javascripts/respond.js"></script>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -25,8 +25,16 @@
       </div><!-- end header -->
 
     <div class="wrapper">
+        <section>
+        <div style="float: left;overflow: hidden;width: 15%;margin-top: 70px;padding: 20px 20px;max-width: 250px;">
+          <div>目录</div>
+          <div style="list-style-type:none!important;">        
+              <li>1，<a href="html/readme.html">README</a></li>
+              <li>2，<a href="html/java总结.html">java总结</a></li>        
+          </div>
+        </div>
+<div style="overflow: hidden;padding-left: 20px;width: 60%">
 
-      <section>
         <div id="title">
           <h1>Zhangtejun.GitHub.io</h1>
           <p>blog(博客)</p>
@@ -59,7 +67,9 @@
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+</div>
       </section>
+      
 
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
