--- a/html/深入解析OutOfMemoryError(下).html
+++ b/html/深入解析OutOfMemoryError(下).html
@@ -36,7 +36,7 @@
 <div style="overflow: hidden;padding-left: 20px;width: 60%">
 
         <div id="title">
-          <p>java总结</p>
+          <p>深入解析OutOfMemoryError（下）</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/zhangtejun">zhangtejun</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
