--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
         <div style="float: left;overflow: hidden;width: 15%;margin-top: 70px;padding: 20px 20px;max-width: 250px;">
           <div>目录</div>
           <div style="list-style-type:none!important;">        
-              <li>1，<a href="html/readme.html">README</a></li>
-              <li>2，<a href="html/java总结.html">java总结</a></li>        
+              <li>1，<a href="html/readme.html" class="title">README</a></li>
+              <li>2，<a href="html/java总结.html" class="title">java总结</a></li>  
+              <li>2，<a href="html/深入解析OutOfMemoryError(下).html" class="title">深入解析OutOfMemoryError(下)</a></li>       
           </div>
         </div>
 <div style="overflow: hidden;padding-left: 20px;width: 60%">
@@ -75,4 +76,16 @@
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
+  <script type="text/javascript">
+    var arry = $(".title");
+    for (var i = arry.length - 1; i >= 0; i--) {
+      $temp = $(arry[i]);
+      var length = $temp.text().length;
+      var value = $temp.text();
+      if (length>15) {
+        $temp.text($temp.text().substring(0,15)+"...");
+        $temp.attr("title",value);
+      }
+    }
+  </script>
 </html>
