--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
           <div>目录</div>
           <div style="list-style-type:none!important;">        
               <li>1，<a href="html/readme.html" class="title">README</a></li>
-              <li>2，<a href="html/java总结.html" class="title">java总结</a></li>  
-              <li>2，<a href="html/深入解析OutOfMemoryError(下).html" class="title">深入解析OutOfMemoryError(下)</a></li>       
+              <li>2，<a href="html/java总结.html" class="title">java总结</a></li>
+              <li>3，<a href="html/深入解析OutOfMemoryError(下).html" class="title">深入解析OutOfMemoryError(下)</a></li>
+              <li>4，<a href="html/classLoad10.html" class="title">Java虚拟机学习（10)：类加载器(ClassLoader)</a></li>         
           </div>
         </div>
 <div style="overflow: hidden;padding-left: 20px;width: 60%">
@@ -83,7 +84,7 @@
       var length = $temp.text().length;
       var value = $temp.text();
       if (length>15) {
-        $temp.text($temp.text().substring(0,15)+"...");
+        $temp.text($temp.text().substring(0,12)+"...");
         $temp.attr("title",value);
       }
     }
