--- a/index.html
+++ b/index.html
@@ -32,7 +32,17 @@
               <li>1，<a href="html/readme.html" class="title">README</a></li>
               <li>2，<a href="html/java总结.html" class="title">java总结</a></li>
               <li>3，<a href="html/深入解析OutOfMemoryError(下).html" class="title">深入解析OutOfMemoryError(下)</a></li>
-              <li>4，<a href="html/classLoad10.html" class="title">Java虚拟机学习（10)：类加载器(ClassLoader)</a></li>         
+              <li>4，<a href="html/classLoad1.html" class="title">Java虚拟机学习（1）：体系结构 内存模型</a></li> 
+              <li>5，<a href="html/classLoad2.html" class="title">Java虚拟机学习（2）：垃圾收集算法</a></li> 
+              <li>6，<a href="html/classLoad3.html" class="title">Java虚拟机学习（3）： 类加载机制</a></li> 
+              <li>7，<a href="html/classLoad4.html" class="title">Java虚拟机学习（4）：JDK可视化监控工具</a></li>
+              <li>8，<a href="html/classLoad5.html" class="title">Java虚拟机学习（5）：内存调优</a></li>
+              <li>9，<a href="html/classLoad6.html" class="title">Java虚拟机学习（6）：对象访问</a></li>
+              <li>10，<a href="html/classLoad7.html" class="title">Java虚拟机学习（7）：对象内存分配与回收</a></li>         
+              <li>11，<a href="html/classLoad8.html" class="title">Java虚拟机学习（8）：查看JVM参数及值的命令行工具</a></li>
+              <li>12，<a href="html/classLoad9.html" class="title">Java虚拟机学习（9）：对象引用强度</a></li>
+              <li>13，<a href="html/classLoad10.html" class="title">Java虚拟机学习（10)：类加载器(ClassLoader)</a></li>
+              <li>14，<a href="html/classLoad11.html" class="title">Java虚拟机学习（10)：类加载器(ClassLoader)</a></li>
           </div>
         </div>
 <div style="overflow: hidden;padding-left: 20px;width: 60%">
